# Modeling_ballistic_movement

./: CMakeLists.txt  README.md  main.cpp
cmake/: VersionResource.rc  generate_product_version.cmake
src/: mainwindow.cpp  mainwindow.h  ui_mainwindow.h
src/Graphic_widget/: DeskPainter.cpp  DeskPainter.h  GraphPainter.cpp  GraphPainter.h  GraphWidget.cpp  GraphWidget.h
src/Physical_engine/: PhysicalEngine.cpp  PhysicalEngine.h
src/Queue/: QueueWithMax.h  StackWithMax.h
